@@ -68,6 +68,9 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-11416. Move ChunkedArrayList into hadoop-common (cmccabe)
 
+    HADOOP-10840. Fix OutOfMemoryError caused by metrics system in Azure File
+    System. (Shanyu Zhao via cnauroth)
+
   OPTIMIZATIONS
 
     HADOOP-11323. WritableComparator#compare keeps reference to byte array.
